easy apply box visual fix
fix css where the easy apply and the apply on company webite would overlap outside the main box

--- a/css/HomePage.css
+++ b/css/HomePage.css
@@ -95,6 +95,7 @@ vertical-align: middle;
     padding-bottom: 10px;
     border: 2px solid black;
     font-size: xxx-large;
+	text-align:center;
 }
 
 h3{
